visible selected area for details sections fix for unavailable `unit/addresses/:id` page visible selected address for unit/addresses fix missing translation (user.orgUnit)

--- a/feature-libs/my-account/organization/src/styles/_list.scss
+++ b/feature-libs/my-account/organization/src/styles/_list.scss
@@ -80,6 +80,13 @@ cx-organization-list {
           // align-items: center;
           // min-height: 74px;
           // text-decoration: underline;
+          &:hover:not(.active) {
+            background-color: var(--cx-color-background);
+          }
+          &.active {
+            border: solid 3px var(--cx-color-primary);
+            background: var(--cx-color-background-focus);
+          }
         }
       }
 
