--- a/feature-libs/my-account/organization/src/styles/_section.scss
+++ b/feature-libs/my-account/organization/src/styles/_section.scss
@@ -34,6 +34,13 @@
         justify-content: space-between;
         display: flex;
       }
+      &:hover:not(.active) {
+        background-color: var(--cx-color-background);
+      }
+      &.active {
+        border: solid 3px var(--cx-color-primary);
+        background: var(--cx-color-background-focus);
+      }
     }
 
     .property {
